syntax = "proto3";
package streaming;

option go_package = "pkg/streaming/types";

message DataFrameProto {
  uint64                index = 1;
  map<string, string>   tags = 2;
  bytes                 data = 3;
  string                message = 4;
}


message DataFrameListProto {
  repeated DataFrameProto index = 1;
}

message AttributesProto {
  map<string, string>  attributes = 1;
}